// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Slack Block widgets Blocks helper can compose blocks into bigger components 1`] = `
Array [
  Object {
    "accessory": Object {
      "action_id": "changeSearch",
      "text": Object {
        "emoji": true,
        "text": "Search",
        "type": "plain_text",
      },
      "type": "button",
    },
    "text": Object {
      "text": "Let me help you find some channels.",
      "type": "mrkdwn",
    },
    "type": "section",
  },
  Object {
    "block_id": undefined,
    "type": "divider",
  },
  Object {
    "text": Object {
      "text": "*Channels*",
      "type": "mrkdwn",
    },
    "type": "section",
  },
  Object {
    "text": Object {
      "text": "*house-ravenclaw*
Discuss Ravenclaw business",
      "type": "mrkdwn",
    },
    "type": "section",
  },
  Object {
    "elements": Array [
      Object {
        "text": "120 members
Last post: <!date^1575643433^{date_pretty}|1575643433>",
        "type": "mrkdwn",
      },
    ],
    "type": "context",
  },
  Object {
    "elements": Array [
      Object {
        "action_id": "thumbsUp",
        "text": Object {
          "emoji": true,
          "text": ":thumbsup:",
          "type": "plain_text",
        },
        "type": "button",
        "value": "house-ravenclaw",
      },
      Object {
        "action_id": "thumbsDown",
        "text": Object {
          "emoji": true,
          "text": ":thumbsdown:",
          "type": "plain_text",
        },
        "type": "button",
        "value": "house-ravenclaw",
      },
    ],
    "type": "actions",
  },
  Object {
    "text": Object {
      "text": "*house-hufflepuff*
Discuss Hufflepuff puffery",
      "type": "mrkdwn",
    },
    "type": "section",
  },
  Object {
    "elements": Array [
      Object {
        "text": "107 members
Last post: <!date^1575643433^{date_pretty}|1575643433>",
        "type": "mrkdwn",
      },
    ],
    "type": "context",
  },
  Object {
    "elements": Array [
      Object {
        "action_id": "thumbsUp",
        "text": Object {
          "emoji": true,
          "text": ":thumbsup:",
          "type": "plain_text",
        },
        "type": "button",
        "value": "house-hufflepuff",
      },
      Object {
        "action_id": "thumbsDown",
        "text": Object {
          "emoji": true,
          "text": ":thumbsdown:",
          "type": "plain_text",
        },
        "type": "button",
        "value": "house-hufflepuff",
      },
    ],
    "type": "actions",
  },
]
`;

exports[`Slack Block widgets FieldsSection renders 1`] = `
Object {
  "fields": Array [
    Object {
      "text": "Ravenclaw is obviously the best house.",
      "type": "mrkdwn",
    },
    Object {
      "text": "Ravenclaw is obviously the best house.",
      "type": "mrkdwn",
    },
  ],
  "type": "section",
}
`;

exports[`Slack Block widgets MdSection renders 1`] = `
Object {
  "text": Object {
    "text": "Ravenclaw is obviously the best house.",
    "type": "mrkdwn",
  },
  "type": "section",
}
`;

exports[`Slack Block widgets actions renders 1`] = `
Object {
  "elements": Array [
    Object {
      "action_id": "ravenAgree",
      "text": Object {
        "emoji": true,
        "text": "Ravenclaw is obviously the best house.",
        "type": "plain_text",
      },
      "type": "button",
    },
    Object {
      "action_id": "ravenAgree-2",
      "text": Object {
        "emoji": true,
        "text": "Ravenclaw is obviously the best house.",
        "type": "plain_text",
      },
      "type": "button",
    },
  ],
  "type": "actions",
}
`;

exports[`Slack Block widgets context renders 1`] = `
Object {
  "elements": Array [
    Object {
      "emoji": true,
      "text": "Ravenclaw is obviously the best house.",
      "type": "plain_text",
    },
  ],
  "type": "context",
}
`;

exports[`Slack Block widgets divider renders 1`] = `
Object {
  "block_id": undefined,
  "type": "divider",
}
`;

exports[`Slack Block widgets file renders 1`] = `
Object {
  "block_id": undefined,
  "external_id": "ABCD1",
  "source": "remote",
  "type": "file",
}
`;

exports[`Slack Block widgets image block renders 1`] = `
Object {
  "alt_text": "An incredibly cute kitten.",
  "block_id": undefined,
  "image_url": "http://placekitten.com/500/500",
  "title": Object {
    "emoji": true,
    "text": "Please enjoy this photo of a kitten",
    "type": "plain_text",
  },
  "type": "image",
}
`;

exports[`Slack Block widgets image block renders without title 1`] = `
Object {
  "alt_text": "An incredibly cute kitten.",
  "block_id": undefined,
  "image_url": "http://placekitten.com/500/500",
  "title": undefined,
  "type": "image",
}
`;

exports[`Slack Block widgets input renders with block_id, hint, and as optional 1`] = `
Object {
  "block_id": "title",
  "element": Object {
    "action_id": "title",
    "initial_value": undefined,
    "placeholder": undefined,
    "type": "plain_text_input",
  },
  "hint": Object {
    "emoji": true,
    "text": "keep it to the true 7",
    "type": "plain_text",
  },
  "label": Object {
    "emoji": true,
    "text": "Title",
    "type": "plain_text",
  },
  "optional": true,
  "type": "input",
}
`;

exports[`Slack Block widgets input renders with minimal information 1`] = `
Object {
  "block_id": undefined,
  "element": Object {
    "action_id": "title",
    "initial_value": undefined,
    "placeholder": undefined,
    "type": "plain_text_input",
  },
  "hint": undefined,
  "label": Object {
    "emoji": true,
    "text": "Title",
    "type": "plain_text",
  },
  "optional": undefined,
  "type": "input",
}
`;

exports[`Slack Block widgets section renders 1`] = `
Object {
  "accessory": Object {
    "action_id": "ravenAgree",
    "text": Object {
      "emoji": true,
      "text": "Ravenclaw is obviously the best house.",
      "type": "plain_text",
    },
    "type": "button",
  },
  "fields": Array [
    Object {
      "emoji": true,
      "text": "Ravenclaw is obviously the best house.",
      "type": "plain_text",
    },
    Object {
      "text": "Ravenclaw is obviously the best house.",
      "type": "mrkdwn",
    },
  ],
  "text": Object {
    "emoji": true,
    "text": "Ravenclaw is obviously the best house.",
    "type": "plain_text",
  },
  "type": "section",
}
`;
